--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "faunadb": "^4.2.0",
     "next": "10.2.0",
     "next-auth": "^3.21.0",
+    "prismic-dom": "^2.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
     "@types/node": "^15.0.2",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.5",
     "typescript": "^4.2.4"
   }
